src/test/ui/parser/issue-43692.stderr
error: invalid start of unicode escape
  --> $DIR/issue-43692.rs:2:9
   |
LL |     '/u{_10FFFF}'; //~ ERROR invalid start of unicode escape
   |         ^

error: aborting due to previous error

